network: Correctly unref NetDevice instances when needed

We have to take the GtkListStore own reference into account.

https://bugzilla.gnome.org/show_bug.cgi?id=708468